--- a/sass/controls/_toolbar.scss
+++ b/sass/controls/_toolbar.scss
@@ -29,8 +29,7 @@ $toolbar-height: 44px;
   }
 
   .buttonset {
-    overflow-x: hidden;
-    overflow-y: visible;
+    overflow: hidden;
     white-space: nowrap;
     //width: 100%;
 
